# monad-actions

./: CHANGELOG.md  README.md  monad-actions.cabal
examples/: Calculator.hs  CalculatorRecords.hs  Main1.hs  Parser.hs
src/Control/Comonad/: Coaction.hs
src/Control/Monad/: Action.hs  TransformerStack.hs
src/Control/Monad/Action/: Class.hs  Instances.hs  Left.hs  Records.hs  Right.hs  TH.hs
test/: Main.hs
