cabal-version: 3.4
name: monad-actions
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:
--       +-+------- breaking API changes
--       | | +----- non-breaking API additions
--       | | | +--- code changes with no API change
version: 0.1.0.0
synopsis: Left or right actions of a monad on a functor
description:
  This package defines classes for left and rght actions of
  monads on functors.  It also includes modules for using
  monad actions with qualified do notation.

license: LGPL-2.0-or-later
license-file: LICENSE
author: noiioiu
maintainer: noiioiu@cocaine.ninja
category: Control
homepage: https://codeberg.org/noiioiu/monad-actions
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Werror -Wall

library
  import: warnings
  exposed-modules:
    Control.Monad.Action
    Control.Monad.Action.Left
    Control.Monad.Action.Right

  other-modules: Control.Monad.Action.TH
  build-depends:
    base ^>=4.20.0.0,
    free,
    kan-extensions,
    mmorph,
    mtl,
    template-haskell,
    transformers,

  hs-source-dirs: src
  default-language: GHC2021

test-suite monad-actions-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    base ^>=4.20.0.0,
    checkers,
    free,
    kan-extensions,
    mmorph,
    monad-actions,
    mtl,
    tasty,
    tasty-quickcheck,
    transformers,
